# diplomamunka

./: README.md
matlab/: do_range_stats.m  do_tdoa.m  do_tdoa_live.m  readme.txt  tdoa_as_func.m
matlab/data.pos.20200305/scenario/: anchors.csv  poses.csv
matlab/data.range-in-nlos.20200305/scenario/: tags.csv
matlab/data.range-in.20200305/scenario/: anchors.csv
matlab/data.range-out.20200305/scenario/: floor.csv
matlab/uwb_mat_lib/: DebugLevel.m  cprintf.m  debug.m  distinguishable_colors.m  get_clocks.m  get_slopes.m  lls_diff2Dp.m  plot_scenario.m  read_scenario.m  uts2sec.m  utsdiff.m
paintball-demo-app/: readme.txt
paintball-demo-app/paintball-demo-app/: build.gradle  local.properties  settings.gradle
paintball-demo-app/paintball-demo-app/app/: build.gradle
paintball-demo-app/paintball-demo-app/app/src/main/: AndroidManifest.xml
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/: PaintballApplication.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/activities/: DashboardActivity.kt  JoinGameActivity.kt  MapActivity.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/config/: Config.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/config/map/: GardenMapConfig.kt  GyenesMapConfig.kt  MapConfig.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/data/ble/: BleService.kt  BleServiceImpl.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/data/mqtt/: MqttService.kt  MqttServiceImpl.kt  Topic.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/data/rest/: GameApi.kt  RestService.kt  RestServiceImpl.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/fragments/dialogs/: ConnectTagFragment.kt  CreateGameFragment.kt  JoinGameFragment.kt  ViewPlayersFragment.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/map/: MapView.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/map/renderables/: Anchor.kt  Map.kt  Player.kt  Renderable.kt
paintball-demo-app/paintball-demo-app/app/src/main/java/demo/app/paintball/util/: ErrorHandler.kt  extensions.kt
paintball-demo-app/paintball-demo-app/app/src/main/res/drawable/: shape_rounded_corner_box.xml
paintball-demo-app/paintball-demo-app/app/src/main/res/layout/: activity_dashboard.xml  activity_join_game.xml  activity_map.xml  fragment_connect_tag.xml  fragment_create_game.xml  fragment_join_game.xml  fragment_view_players.xml  list_item_ble_devices.xml
paintball-demo-app/paintball-demo-app/app/src/main/res/menu/: menu_join_game.xml
paintball-demo-app/paintball-demo-app/app/src/main/res/values/: colors.xml  config.xml  dimen.xml  game_types.xml  strings.xml  styles.xml
paintball-demo-app/paintball-demo-app/gradle/wrapper/: gradle-wrapper.properties
paintball-demo-app/paintball-demo-server/: build.gradle.kts  settings.gradle.kts
paintball-demo-app/paintball-demo-server/src/main/kotlin/demo/server/paintball/: PaintballApplication.kt
paintball-demo-app/paintball-demo-server/src/main/kotlin/demo/server/paintball/config/: AppConfig.kt
paintball-demo-app/paintball-demo-server/src/main/kotlin/demo/server/paintball/controller/: GameController.kt  MqttTestController.kt
paintball-demo-app/paintball-demo-server/src/main/kotlin/demo/server/paintball/data/: Game.kt  Player.kt
paintball-demo-app/paintball-demo-server/src/main/kotlin/demo/server/paintball/mock/: TestService.kt
paintball-demo-app/paintball-demo-server/src/main/kotlin/demo/server/paintball/service/: GameService.kt  GameServiceImpl.kt  MqttService.kt  MqttServiceImpl.kt
paintball-demo-app/paintball-demo-server/src/main/resources/: default.properties
paintball-demo-app/paintball-demo-server/src/test/kotlin/demo/server/paintball/: PaintballApplicationTests.kt
tag_firmware/: readme.txt
tag_firmware/firmware/: CMakeLists.txt  CMakePaths.cmake  README.md  accel.c  accel.h  address_handler.c  address_handler.h  crc.c  crc.h  data_format.c  data_format.h  dwm_utils.c  dwm_utils.h  impl_anchor.c  impl_anchor.h  impl_observer.c  impl_observer.h  impl_tag.c  impl_tag.h  log.h  main.c  ranging.c  ranging.h  ranging_anchor.c  ranging_anchor.h  timing.c  timing.h  uart.c  uart.h  utils.c  utils.h
tag_firmware/firmware/ble/: accel_service.c  accel_service.h  ble_func.c  ble_func.h  ranging_service.c  ranging_service.h
tag_firmware/firmware/config/: custom_board.h  sdk_config.h
tag_firmware/firmware/ld.script/: ld_no_sofdevice.ld  ld_softdevice.ld
tag_firmware/matlab_codegen/lib/tdoa_as_func_test/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  eml_rand_mt19937ar_stateful.c  eml_rand_mt19937ar_stateful.h  find.c  find.h  gcGuiReport.mat  isequal.c  isequal.h  kalmanfil_tdoa.c  kalmanfil_tdoa.h  minOrMax.c  minOrMax.h  rand.c  rand.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  str2double.c  str2double.h  string1.c  string1.h  tdoa_as_func_test.c  tdoa_as_func_test.h  tdoa_as_func_test_data.c  tdoa_as_func_test_data.h  tdoa_as_func_test_initialize.c  tdoa_as_func_test_initialize.h  tdoa_as_func_test_rtw.bat  tdoa_as_func_test_rtw.mk  tdoa_as_func_test_rtw.rsp  tdoa_as_func_test_terminate.c  tdoa_as_func_test_terminate.h  (+1 more)
tag_firmware/matlab_codegen/lib/tdoa_as_func_test/examples/: main.c  main.h
tag_firmware/matlab_codegen/lib/tdoa_as_func_test/html/: report.mldatx
tag_firmware/matlab_codegen/lib/tdoa_as_func_test/interface/: _coder_tdoa_as_func_test_api.c  _coder_tdoa_as_func_test_api.h  _coder_tdoa_as_func_test_info.c  _coder_tdoa_as_func_test_info.h  _coder_tdoa_as_func_test_mex.c  _coder_tdoa_as_func_test_mex.h
tag_firmware/matlab_codegen/mex/tdoa_as_func_test/: cfiGuiReport.mat  tdoa_as_func_test_mex.mexa64  tdoa_as_func_test_mex.mexw64
tag_firmware/matlab_codegen/mex/tdoa_as_func_test/html/: report.mldatx
(+20 files in other folders)
